[package]
name = "spatium"
version = "0.1.0"
authors = ["dyens <dyens@mail.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
Spatium. Calc distance between sequences.
"""
keywords = ["spatium"]
categories = ["algorithms"]
repository = "https://github.com/dyens/spatium"
homepage = "https://github.com/dyens/spatium"
documentation = "https://docs.rs/spatium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
